Here I added a new project to the folder.
Here I added the Basic_HTML_and_Javascript_1 project.

--- a/Assignment_1.html
+++ b/Assignment_1.html
@@ -29,6 +29,23 @@
 	<a href = "pictures.html">Click here to go to the picture gallery.</a>
 	<img src = "squid.jpg">
 	
+	
+	
+		<button onclick = "My_First_Function()">
+		Click me!
+	</button>
+	<p id = "Irish"></p>
+<script src="Basic_JavaScript_1.js">
+</script>
+
+
+
+
+
+
+
+
+	
 	<footer> 
 		<p>Created by James Hannafin</p>
 		<p>Social Media
