--- a/pictures.html
+++ b/pictures.html
@@ -5,7 +5,7 @@
 		<meta charset = "utf-8">
 	</head>
 		<nav>
-				<a href="assignment_1.html">Home</a> 
+			<a href="assignment_1.html">Home</a> 
 			<a href="designdoc_stilllight.html">Design Document</a> 
 			<a href="pictures.html">Pictures</a> 		
 			<a href="videos.html">Videos</a>
@@ -16,8 +16,11 @@
 	
 		<header>
 			<img src = "profile_hazmatteam.jpg">
+			Here is a team
 			<img src = "squid.jpg">
+			Here is a squid
 			<img src = "spook_outline.jpg">
+			Here is a spook
 		</header>
 	</body>
 </html>
