--- a/Pages/sldc_designdoc.html
+++ b/Pages/sldc_designdoc.html
@@ -6,12 +6,13 @@
 	</head>
 	
 		<nav>
-		<a href="assignment_1.html">Home</a> 
-			<a href="designdoc_stilllight.html">Design Document</a> 
-			<a href="pictures.html">Pictures</a> 		
-			<a href="videos.html">Videos</a>
-			<a href="trailers.html">Embedded Video</a> 
-			<a href="designdoc_stilllight.html">About</a>
+			<a href="../sldc_home.html">Home</a> 
+			<a href="sldc_news.html">News</a> 
+			<a href="sldc_designdoc.html">Design Document</a> 
+			<a href="sldc_gallery.html">Gallery</a> 
+			<a href="sldc_videos.html">Videos</a> 
+			<a href="sldc_weapons.html">Armory</a>
+			<a href="sldc_designdoc.html">Characters</a>
 		</nav>
 		
 	<body>
