--- a/Pages/sldc_videos.html
+++ b/Pages/sldc_videos.html
@@ -6,13 +6,14 @@
 	</head>
 	
 	<nav>
-				<a href="assignment_1.html">Home</a> 
-			<a href="designdoc_stilllight.html">Design Document</a> 
-			<a href="pictures.html">Pictures</a> 		
-			<a href="videos.html">Videos</a>
-			<a href="trailers.html">Embedded Video</a> 
-			<a href="designdoc_stilllight.html">About</a>
-	</nav>
+			<a href="../sldc_home.html">Home</a> 
+						<a href="sldc_news.html">News</a> 
+			<a href="sldc_designdoc.html">Design Document</a> 
+			<a href="sldc_gallery.html">Pictures</a> 
+			<a href="sldc_videos.html">Videos</a> 
+			<a href="sldc_weapons.html">Weapons</a>
+			<a href="sldc_designdoc.html">NPCs</a>
+		</nav>
 	
 	
 		<body>
